--- a/2022-1/beamer/C12_md1.tex
+++ b/2022-1/beamer/C12_md1.tex
@@ -1,7 +1,8 @@
-%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
-\usetheme{CambridgeUS}
+%\documentclass{beamer} 
 %\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
+\usetheme{CambridgeUS}
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -102,7 +103,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[28/04/2022]{28 de abril  de 2022}
+\date[03/05/2022]{3 de mayo  de 2022}
 
 \newcommand{\mcd}{\operatorname{mcd}}
 
@@ -121,11 +122,11 @@
             \item[{\color{blue} a)}] $ d|a$  y $d|b$;
             \item[{\color{blue} b)}]  si $ c|a $ y $c|b$ entonces $ c|d$.
         \end{enumerate}
-        \end{definicion}
+        \end{definicion}\pause
         \vskip .4cm 
         \begin{itemize}
             \item[$\bullet$]  La condición (a) nos dice que $d$ es un común divisor de $a$ y $b$.
-            \vskip .4cm 
+            \vskip .4cm \pause
             
             \item[$\bullet$] La condición (b) nos dice que cualquier divisor común de
             $a$ y $b$ es también divisor de $d$. 
