--- a/2022-1/beamer/C12_md1.tex
+++ b/2022-1/beamer/C12_md1.tex
@@ -1,6 +1,6 @@
-%\documentclass[handout]{beamer} % sin pausas
-\documentclass{beamer} 
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usetheme{CambridgeUS}
 
