--- a/2022-1/beamer/C13_md1.tex
+++ b/2022-1/beamer/C13_md1.tex
@@ -357,14 +357,13 @@
     \begin{frame}
         \begin{teorema}\label{t1.7.2} Sean $a$ y $b$ enteros no nulos, entonces
             $$
-            \mcm(a,b)=\frac{a b}{\mcd(a,b)}.
+            \mcm(a,b)=\frac{|a b|}{\mcd(a,b)}.
             $$
         \end{teorema}\pause
         
-        En particular este resultado implica que si $a$ y $b$ son enteros
-        coprimos, entonces $\mcm(a,b)=ab$.
+        En particular este resultado implica que si $a$ y $b$ son naturales coprimos, entonces $\mcm(a,b)=ab$.
         \pause
-        \vskip .8cm
+        \vskip .5cm
         
         \begin{ejemplo} Encontrar el  mcm de $8$ y $14$.\pause
             \begin{solucion}\pause
@@ -382,8 +381,8 @@
             $\mcd(na,nb)=n\mcd(a,b)$.
         \end{ejercicio}\pause
         \begin{solucion}\pause
-            Sea $d = (a,b)$, debemos probar que $ nd = (na,nb)$.\pause
-            
+            Sea $d = (a,b)$, debemos probar que $ nd = (na,nb)$. Es decir, \pause
+            \vskip .2cm
             \begin{enumerate}
                 \item[{\color{blue}a)}] $ d|a$  y $d|b$;
                 \item[{\color{blue}b)}]  si $ c|a $ y $c|b$ entonces $ c|d$.
@@ -422,7 +421,6 @@
         c|na ,c|nb  \Rightarrow  c|s(na) +t(nb) = nd.
         $$
         Esto prueba     {\color{blue}b')}. \qed
-        
     \end{frame}
     
     
