--- a/2022-1/beamer/C14_md1.tex
+++ b/2022-1/beamer/C14_md1.tex
@@ -1,7 +1,9 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+%\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
 \usetheme{CambridgeUS}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -100,7 +102,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[09/05/2022]{9 de mayo de 2022}
+\date[10/05/2022]{10 de mayo de 2022}
 
 
 
