--- a/2022-1/beamer/C15_md1.tex
+++ b/2022-1/beamer/C15_md1.tex
@@ -1,7 +1,8 @@
-%\documentclass{beamer} 
-\documentclass[handout]{beamer} % sin pausas
+%\documentclass[handout]{beamer} % sin pausas
+\documentclass{beamer} 
+\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
 \usetheme{CambridgeUS}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -100,7 +101,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[10/05/2022]{10 de mayo de 2022}
+\date[12/05/2022]{12 de mayo de 2022}
 
 
 
@@ -114,7 +115,7 @@
         \end{proposicion} \pause
         \begin{proof}\pause Haremos la demostración por el absurdo. 
             \vskip .3cm
-            Sean  $p_1,p_2,\ldots, p_r$ todos los números primos. 
+            Supongamos que $p_1,p_2,\ldots, p_r$ son todos los números primos. 
             \vskip .3cm
             Sea $n =  p_1p_2\ldots p_r+1$. 
             \vskip .3cm
