--- a/2022-1/apunte/main.tex
+++ b/2022-1/apunte/main.tex
@@ -132,7 +132,11 @@
 %%%=======================
 %%%=======================
 %%% CAP3 =================
-    \input{Cap.03.tex}
+%    \input{Cap.03.tex}
+%%%=======================
+%%%=======================
+%%% CAP3 alternativo=================
+\input{Cap.03_alternativo.tex}
 %%%=======================
 %%%=======================
 %%% CAP4 =================
