actualización  de beamer

--- a/2022-1/apunte/main.tex
+++ b/2022-1/apunte/main.tex
@@ -133,10 +133,8 @@
 %%%=======================
 %%% CAP3 =================
 %    \input{Cap.03.tex}
-%%%=======================
-%%%=======================
-%%% CAP3 alternativo=================
-\input{Cap.03_alternativo.tex}
+%    \input{Cap.03_alternativo_1.tex}
+    \input{Cap.03_alternativo_2.tex}
 %%%=======================
 %%%=======================
 %%% CAP4 =================
