--- a/2022-1/beamer/C16_md1.tex
+++ b/2022-1/beamer/C16_md1.tex
@@ -1,7 +1,9 @@
-%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
-\usetheme{CambridgeUS}
+%\documentclass{beamer} % con pausas
 %\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
+\usetheme{CambridgeUS}
+
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -101,7 +103,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[12/05/2022]{12 de mayo de 2022}
+\date[17/05/2022]{17 de mayo de 2022}
 
 
 
@@ -162,7 +164,7 @@
     
     \begin{frame}
         
-        \noindent (c)\pause   Lo haremos por inducción sobre $j$. 
+        \noindent (c) \pause   Lo haremos por inducción sobre $j$. 
         \vskip .2cm
         Es claro que si $j=1$ el resultado es verdadero. 
         \vskip .2cm
