--- a/2022-1/beamer/C18_md1.tex
+++ b/2022-1/beamer/C18_md1.tex
@@ -1,6 +1,9 @@
-%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} % con pausas
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
 \usetheme{CambridgeUS}
+
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -42,7 +45,6 @@
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -99,7 +101,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[19/05/2022]{19 de mayo de 2022}
+\date[31/05/2022]{31 de mayo de 2022}
 
 
 
