--- a/2022-1/beamer/C20_md1.tex
+++ b/2022-1/beamer/C20_md1.tex
@@ -1,7 +1,9 @@
-%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
-\usetheme{CambridgeUS}
+%\documentclass{beamer} % con pausas
 %\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
+\usetheme{CambridgeUS}
+
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -100,7 +102,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[02/06/2022]{2 de junio de 2022}
+\date[07/06/2022]{7 de junio de 2022}
 
 
 
