--- a/2022-1/beamer/C23_md1.tex
+++ b/2022-1/beamer/C23_md1.tex
@@ -1,6 +1,9 @@
-%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} % con pausas
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
 \usetheme{CambridgeUS}
+
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -99,7 +102,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[14/06/2022]{14 de junio de 2022}
+\date[16/06/2022]{16 de junio de 2022}
 
 
 
@@ -589,59 +592,6 @@ El orden fue elegido de la siguiente forma: dado el coloreo con colores $\chi(G)
     
     \end{frame}
 
-
-
-    \begin{frame}
-        \frametitle{}
-    
-        
-    
-    \end{frame}
-
-
-
-    \begin{frame}
-        \frametitle{}
-    
-        
-    
-    \end{frame}
-
-
-
-    \begin{frame}
-        \frametitle{}
-    
-        
-    
-    \end{frame}
-
-
-
-    \begin{frame}
-        \frametitle{}
-    
-        
-    
-    \end{frame}
-
-
-
-    \begin{frame}
-        \frametitle{}
-    
-        
-    
-    \end{frame}
-
-
-
-    \begin{frame}
-        \frametitle{}
-    
-        
-    
-    \end{frame}
 
 
 \end{document}
