--- a/2022-1/beamer/C19_md1.tex
+++ b/2022-1/beamer/C19_md1.tex
@@ -1,7 +1,9 @@
-%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
-\usetheme{CambridgeUS}
+%\documentclass{beamer} % con pausas
 %\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
+\usetheme{CambridgeUS}
+
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -101,7 +103,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[31/05/2022]{31 de mayo de 2022}
+\date[02/06/2022]{2 de junio de 2022}
 
 
 
