--- a/2022-1/beamer/C22_md1.tex
+++ b/2022-1/beamer/C22_md1.tex
@@ -1,5 +1,7 @@
-%\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} % con pausas
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+
 \usetheme{CambridgeUS}
 
 \usepackage{etex}
@@ -42,7 +44,6 @@
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -99,7 +100,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[09/06/2022]{9 de junio de 2022}
+\date[14/06/2022]{14 de junio de 2022}
 
 
 
